# PowerCost

./: README.html  README.md  README.md.backup  build_log.txt  pip_install_powercost.txt  ponderosa_electricity_usage.ini  pyproject.toml  runme.ps1
doc/: PoweCost Code Analysis by ChatGPT.docx  PowerCost_Architecture.vsdx  SAMPLE.ini  pip_install_log.txt  startup_example.txt  test_config.py  test_database.py  ~$$PowerCost_Architecture.~vsdx
doc/emu_docs/: test_emu.py
scripts/: powercost_windows_start.ps1
sql/: CalcDailyElectricity_proc.sql  Daily_Cost.sql  Daily_Cost_24HR.sql  General_Selects.sql  Setup_Database.sql
src/: PonderosaConfig.py  PonderosaDB.py  Ponderosa_Electricity_Usage.ps1  Ponderosa_Electricity_Usage.py  Ponderosa_Electricity_Usage_SAMPLE.ini  Startup_Example.txt  extract_docstrings.py  ponderosa_db.py  ponderosa_gen_doc.py  powercost_project_docstrings.html  powercost_project_docstrings.md  test_Config.py  test_DB.py
src/powercost.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/powercost_project/: __init__.py  __main__.py  config.py  database.py  main.py
