[project]
name = "powercost"
version = "2.1.0"
requires-python = ">= 3.8"
authors = [
  {name = "James Buck", email = "james.r.buck425@gmail.com"},
]
maintainers = [
  {name = "James Buck", email = "james.r.buck425@gmail.com"},
]
description = "Calculate electricity usage via EMU library"
readme = "README.md"
dependencies = [
    "emu_power",
    "mysql.connector",
]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Developers",
  "Topic :: Software Development",
]

[project.urls]
Homepage = "https://github.com/jamesrbuck/powercost"

[project.scripts]
powercost-cli = "powercost:main_cli"

[project.gui-scripts]
powercost-gui = "powercost:main_cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
